--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/livewire": "^3.6",
-        "livewire/volt": "^1.7.0"
+        "livewire/volt": "^1.7.0",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
